objects/MedProBT__Row_Result__c.object
<CustomObject>
    <fields>
        <fullName>MedProBT__Batch_Result__c</fullName>
        <label>Batch Result</label>
        <referenceTo>MedProBT__Batch_Result__c</referenceTo>
        <relationshipName>Row_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MedProBT__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Row_Number__c</fullName>
        <label>Row Number</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <label>MedPro Row Result</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Row Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro Row Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>